-Xcheck:jni WARNINGs working with fonts on Linux

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 18
    • Affects Version/s: 7, 8, 11, 16, 17
    • Component/s: client-libs
    • 2d
    • b12
    • linux

      Running Pycharm IDE with -Xcheck:jni on Linux with the latest OpenJDK resulted in a large number of warning messages following these two unique patterns:

      WARNING in native method: JNI call made without checking exceptions when required to from CallIntMethod
      at sun.font.FreetypeFontScaler.initNativeScaler(java.desktop@18-internal/Native Method)
      at sun.font.FreetypeFontScaler.<init>(java.desktop@18-internal/FreetypeFontScaler.java:67)
      at sun.font.FontScaler.getScaler(java.desktop@18-internal/FontScaler.java:102)
      at sun.font.TrueTypeFont.getScaler(java.desktop@18-internal/TrueTypeFont.java:1249)
      - locked <0x00000000db7b3f60> (a sun.font.TrueTypeFont)
      at sun.font.FileFontStrike.<init>(java.desktop@18-internal/FileFontStrike.java:162)
      ...


      WARNING in native method: JNI call made without checking exceptions when required to from CallIntMethod
      at sun.font.FreetypeFontScaler.getGlyphImageNative(java.desktop@18-internal/Native Method)
      at sun.font.FreetypeFontScaler.getGlyphImage(java.desktop@18-internal/FreetypeFontScaler.java:115)
      - locked <0x00000000dce03b60> (a sun.font.FreetypeFontScaler)
      at sun.font.FileFont.getGlyphImage(java.desktop@18-internal/FileFont.java:199)
      ...

            Assignee:
            Vitaly Provodin
            Reporter:
            Vitaly Provodin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: