8269223: -Xcheck:jni WARNINGs working with fonts on Linux